Dwie linijki zmienione na zajeciach, ktore sprawily magie

--- a/datanucleus-samples-jdo-tutorial/pom.xml
+++ b/datanucleus-samples-jdo-tutorial/pom.xml
@@ -205,7 +205,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.1</version>
                 <configuration>
-                    <mainClass>org.datanucleus.samples.jdo.tutorial.Main</mainClass>
+                    <mainClass>PBD.Main</mainClass>
                     <systemProperties>
                         <systemProperty>
                             <key>log4j.configuration</key>
